2003-10-28  Jeff Martin

	* conglomerate.schema
	path of templates

2003-10-27  Geert Stappers <stappers@stappers.nl>

	* ChangeLog:
	Created this file.

	* catalog & catalog.xml
	Files that Steinar Bang provided in bugzilla#122011.