@@ -1,0 +1,8 @@
+conglomerate
+	command=conglomerate %f
+	name=conglomerate
+	can_open_multiple_files=true
+	expects_uris=true
+	requires_terminal=false
+	mime_types=text/xml,text/x-dtd,text/x-xds
+	uses_gnomevfs=true
