@@ -1,0 +1,34 @@
+text/xml:
+	default_action_type=application
+	default_application_id=conglomerate
+	short_list_application_ids_for_novice_user_level=conglomerate
+	short_list_application_ids_for_intermediate_user_level=conglomerate
+	short_list_application_ids_for_advanced_user_level=conglomerate
+	use_category_default=yes
+	open=conglomerate %f
+	edit=conglomerate %f
+	view=conglomerate %f
+
+text/x-dtd:
+	default_action_type=application
+	default_application_id=conglomerate
+	short_list_application_ids_for_novice_user_level=conglomerate
+	short_list_application_ids_for_intermediate_user_level=conglomerate
+	short_list_application_ids_for_advanced_user_level=conglomerate
+	use_category_default=yes
+	open=conglomerate %f
+	edit=conglomerate %f
+	view=conglomerate %f
+
+text/x-xds:
+	description=Conglomerate Display Specification
+	default_action_type=application
+	default_application_id=conglomerate
+	short_list_application_ids_for_novice_user_level=conglomerate
+	short_list_application_ids_for_intermediate_user_level=conglomerate
+	short_list_application_ids_for_advanced_user_level=conglomerate
+	category=Documents/Extended Markup Language (XML)
+	use_category_default=yes
+	open=conglomerate %f
+	edit=conglomerate %f
+	view=conglomerate %f
