@@ -1,0 +1,2 @@
+text/x-xds
+	ext: xds
