@@ -1,3 +1,8 @@
+2003-11-23  Robert Varga
+
+	* conglomerate.keys.in, conglomerate.mime, conglomerate.applications, Makefile.am
+	fix for bug 108400: desktop integration
+
 2003-10-28  Jeff Martin
 
 	* conglomerate.schema
